# karaoke_engine

./: .gitignore  CHANGELOG.md  GATE_10_DOCUMENTATION_REPORT.md  GATE_1_REPORT.md  GATE_2_REPORT.md  GATE_3_REPORT.md  GATE_4_REPORT.md  GATE_5_REPORT.md  GATE_6_REPORT.md  GATE_7_REPORT.md  GATE_8_REPORT.md  GATE_9_REPORT.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml
docs/: api-reference.md  ass-karaoke.md  development.md  ffmpeg-rendering.md  index.md  installation.md  production-usage.md  quickstart.md  real-openai-smoke-test.md  release.md  supported-inputs.md  troubleshooting.md
examples/: sample.srt  sample.vtt  whisper_sample.json
karaoke_engine/: __init__.py  engine.py  errors.py  models.py  segmenter.py  validators.py
karaoke_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
karaoke_engine/ass/: __init__.py  escape.py  styles.py  writer.py
karaoke_engine/parsers/: __init__.py  cue_utils.py  srt.py  vtt.py  whisper_json.py
karaoke_engine/render/: __init__.py  ffmpeg.py  probe.py
karaoke_engine/utils/: __init__.py  timecode.py
real_api_smoke_output/: karaoke.ass  openai_whisper_transcript.json
scripts/: real_openai_karaoke_video_smoke.py  release_check.py
tests/: test_ass_escape.py  test_ass_style.py  test_ass_writer.py  test_engine.py  test_engine_render.py  test_engine_srt_vtt.py  test_examples_workflow.py  test_ffmpeg.py  test_models.py  test_packaging_readiness.py  test_probe.py  test_release_readiness.py  test_segmenter.py  test_srt.py  test_style_hardening.py  test_timecode.py  test_validation_hardening.py  test_vtt.py  test_whisper_json.py
