[project]
name = "karaoke_engine"
version = "0.1.0"
description = "Lightweight server-friendly karaoke subtitle engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "karaoke_engine contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["karaoke_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
